--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "tsiura/byte-buffer",
   "description": "Php library to parse and build byte buffer",
+  "license": "GPL-3.0-or-later",
   "authors": [
     {
       "name": "Tsiura Evgeniy",
@@ -9,13 +10,13 @@
   ],
   "repositories": [],
   "require": {
-    "php": "^8.1"
+    "php": ">=8.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.0",
-    "squizlabs/php_codesniffer": "^3.5",
-    "vimeo/psalm": "^5.7",
-    "phpstan/phpstan": "^1.10"
+    "phpunit/phpunit": "^10.5",
+    "squizlabs/php_codesniffer": "^3.10",
+    "vimeo/psalm": "^5.24",
+    "phpstan/phpstan": "^1.11"
   },
   "autoload": {
     "psr-4": {
