--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "tsiura/byte-buffer",
+  "name": "zeran/byte-buffer",
   "description": "Php library to parse and build byte buffer",
   "license": "GPL-3.0-or-later",
   "authors": [
@@ -15,12 +15,12 @@
   "require-dev": {
     "phpunit/phpunit": "^10.5",
     "squizlabs/php_codesniffer": "^3.10",
-    "vimeo/psalm": "^5.24",
+    "vimeo/psalm": "^6.9",
     "phpstan/phpstan": "^1.11"
   },
   "autoload": {
     "psr-4": {
-      "Tsiura\\ByteBuffer\\": "src/"
+      "Zeran\\ByteBuffer\\": "src/"
     }
   },
   "autoload-dev": {
